[package]
# The MCU tier (ADR 0058): the no_std integer LML codec + the shared `codec`
# seam. This is the firmware-deployable lossless floor — firmware links ONLY
# this crate, so the float/heavy Optimum frontier can never enter the riscv32
# dependency graph. It is also the BASE the Desktop and Optimum tiers depend on
# (they reuse the LML codec + the `Codec` seam). The umbrella crate `lamquant-lml`
# (lib `lamquant_core`) re-exports these modules so existing
# `use lamquant_core::{lml,lpc,...}` sites are unaffected.
name = "lamquant-lml-mcu"
version = "0.9.3"
edition = "2021"
rust-version = "1.81"
description = "LamQuant LML — MCU tier: no_std integer Le Gall 5/3 + LPC + Golomb codec + the shared Codec seam (the firmware-deployable lossless floor; base for the Desktop/Optimum tiers)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Quitetall/LamQuant-Lossless"

[lib]
# Distinct from the umbrella's `lamquant_core` (which re-exports us).
name = "lamquant_lml_mcu"
crate-type = ["rlib"]

[features]
# Default = the host scalar codec (`std`: f64 RD search / target-BPS, extended
# LPC, blockfloat, std::io sinks). A bare `cargo test -p lamquant-lml-mcu`
# exercises the whole suite; the firmware / no_std floor is validated explicitly
# with `--no-default-features --target riscv32imac-unknown-none-elf` (CI gate).
#
# ADR 0058 carve-full: the rayon parallel path (the old `archive` feature) moved
# wholesale to the Desktop tier `lamquant-lml-desktop`, so this crate carries no
# rayon and no `archive` feature anymore — it is the pure scalar codec.
default = ["std"]

# Host codec capabilities: f64 RD search (target-BPS), env-var opt-ins like
# LAMQUANT_TRY_EXTENDED_LPC, Anytime LPC, blockfloat bench, std::io sinks.
std = []

# ADR 0023 Track B5+ / ADR 0051 P3.5: constriction-backed arithmetic +
# empirical-categorical range coders (arith_cat). Runtime opt-in via
# LAMQUANT_TRY_ARITHMETIC=1.
experimental_arithmetic = ["std", "dep:constriction", "dep:probability"]

# ADR 0023 Track B1: bit-packed-residual candidate. Opt-in via this feature
# AND LAMQUANT_TRY_BIT_PACK=1 at runtime.
experimental_bit_pack = ["std"]

[dependencies]
# Shared no_std CRC-32 (re-exported as `lamquant_lml_mcu::crc32`).
lamquant-common = { version = "0.1.3", path = "../crates/lamquant-common", default-features = false }
# Foundational ABIR crate (ADR 0069 S2a): owns the codec-seam enums Format/Mode
# (re-exported from `crate::codec`), growing to the typed IR + Codec trait.
abir = { version = "0.1.0", path = "../crates/abir", default-features = false }
# `libm` supplies `log` for the adaptive-LPC AIC/MDL penalty in no_std builds
# (`f64::ln()` is std-only and would break the firmware path).
libm = "0.2"

# (rayon removed — ADR 0058 carve-full moved the parallel path to the Desktop
# tier `lamquant-lml-desktop`, which owns the rayon dependency now.)

# Research-grade entropy coders (rANS/range/arithmetic) backing
# src/arithmetic.rs + src/arith_cat.rs when `experimental_arithmetic` is on.
# BSD-3 (compatible with our AGPL-3.0). ~25 KB binary add.
constriction = { version = "0.4", default-features = false, features = ["std"], optional = true }
# Continuous distribution helpers (Laplace, etc) for the constriction
# LeakyQuantizer. Used only with `experimental_arithmetic`.
probability = { version = "0.20", optional = true }

[dev-dependencies]
# Core-level tests relocated from the facade (conformance, property_roundtrip,
# bounded_mae_property, target_bps_property, byte_equal_backends).
proptest = "1"
# byte_equal_backends.rs hashes encoded bytes for the golden table.
sha2 = "0.10"
