[package]
# ADR 0052 Tier 3 ("Optimum") + ADR 0054 (the H.BWC warplan) + ADR 0058 (the
# lamquant-lml-* tier naming): the LMO codec — deterministic, max-compression-
# ratio, float-allowed, NOT MCU-decodable. Depends on the MCU tier
# (`lamquant-lml-mcu`) for the shared Codec seam + the LML codec it re-encodes
# for WP0 parity; NEVER pulled into the firmware (riscv32) dependency graph via
# its `encode` feature, so its float/heavy DSP cannot threaten the lossless floor.
name = "lamquant-lml-optimum"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
description = "LamQuant Optimum (LMO) — deterministic max-ratio lossless/near-lossless codec, host-only encode, no_std-capable decode. The H.BWC ratio attack (ADR 0052/0054)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Quitetall/LamQuant-Lossless"

[lib]
name = "lamquant_lml_optimum"
crate-type = ["rlib"]

[features]
# Default = the no_std-capable LMO DECODER (the module Desktop ships standard
# and Firmware can optionally install — ADR 0052). Pure decode, no float-heavy
# encode machinery, so it can compile for the MCU when explicitly opted in.
default = ["decode"]

# LMO decoder. no_std-capable: reconstructs an LMO stream back to the shared
# signal abstraction. Heavy (soft-float) on an MCU, hence "optional, only if
# you really need it" in the firmware build.
decode = []

# LMO encoder: the deterministic max-CR analysis (deeper transform, Lagrangian
# PCRD allocation, context entropy, long-lag predictors). std + float. NEVER
# enabled in the firmware graph. Pulls the core `archive` feature so the host
# RD search (`lml::compress_target_bps`, archive-gated) is reachable for the
# `Mode::TargetBps` (WP1-WP8) path.
encode = ["std", "decode", "lamquant-lml-mcu/archive"]

# Host std (f64, std::io). Implied by `encode`.
std = ["lamquant-lml-mcu/std"]

[dependencies]
# The shared Codec seam + the LML codec live in the MCU tier (ADR 0058).
lamquant-lml-mcu = { version = "0.9.3", path = "../lamquant-lml-mcu", default-features = false }
