[package]
# ADR 0052 Tier 3 ("Optimum") + ADR 0054 (the H.BWC warplan) + ADR 0058 (the
# lamquant-lml-* tier naming): the LMO codec — deterministic, max-compression-
# ratio, float-allowed, NOT MCU-decodable. Depends on the MCU tier
# (`lamquant-lml-mcu`) for the shared Codec seam + the LML codec it re-encodes
# for WP0 parity; NEVER pulled into the firmware (riscv32) dependency graph via
# its `encode` feature, so its float/heavy DSP cannot threaten the lossless floor.
name = "lamquant-lml-optimum"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
build = "build.rs"
description = "LamQuant Optimum (LMO) — deterministic max-ratio lossless/near-lossless codec, host-only encode, no_std-capable decode. The H.BWC ratio attack (ADR 0052/0054)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Quitetall/LamQuant-Lossless"

[lib]
name = "lamquant_lml_optimum"
crate-type = ["rlib"]

[[bin]]
name = "optimum-v1-codec"
path = "src/bin/optimum_v1_codec.rs"
required-features = ["benchmark-cli"]

[features]
# Default = the no_std-capable LMO DECODER (the module Desktop ships standard
# and Firmware can optionally install — ADR 0052). Pure decode, no float-heavy
# encode machinery, so it can compile for the MCU when explicitly opted in.
default = ["decode"]

# LMO decoder. no_std-capable: reconstructs an LMO stream back to the shared
# signal abstraction. Heavy (soft-float) on an MCU, hence "optional, only if
# you really need it" in the firmware build.
decode = []

# LMO encoder: the deterministic max-CR analysis (deeper transform, Lagrangian
# PCRD allocation, context entropy, long-lag predictors). std + float. NEVER
# enabled in the firmware graph. Pulls the core `archive` feature so the host
# RD search (`lml::compress_target_bps`, now std-gated after ADR 0058) is
# reachable for the `Mode::TargetBps` (WP1-WP8) path via `std`.
encode = ["std", "decode", "dep:rayon"]

# Host-only benchmark adapter CLI. Keep its JSON/provenance dependencies out of
# the library's established encode feature and the no_std decoder graph.
benchmark-cli = ["encode", "dep:serde_json", "dep:sha2"]

# Host std (f64, std::io). Implied by `encode`.
std = ["lamquant-lml-mcu/std"]

# ADR 0054 Phase 3 lever 3 (stage 3a — measurement): forward the MCU tier's
# constriction-backed empirical-categorical range coders (`arith_cat`, order-0 +
# order-1 context) so the 9/7 per-subband path can A/B them against Golomb/zRLE.
# std-only (constriction) ⇒ host-encode / host-decode measurement substrate; the
# DEFAULT LMO build never emits the arithmetic coder tags, so the no_std decode
# path is unaffected. Implies `encode` (the path that selects coders lives there).
experimental_arithmetic = ["encode", "lamquant-lml-mcu/experimental_arithmetic"]

[dependencies]
# The shared Codec seam + the LML codec live in the MCU tier (ADR 0058).
lamquant-lml-mcu = { version = "0.9.3", path = "../lamquant-lml-mcu", default-features = false }
# Host-only (encode feature): rayon parallelizes the keep-best across channels +
# configs. std-only; never in the no_std/firmware decode graph.
rayon = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
