[package]
# The no_std integer LML codec floor (ADR 0052 Tier 1 / "Firmware").
# Carved out of `lamquant-lml` so the firmware build depends on ONLY this
# crate and the float/heavy Optimum frontier can never enter the riscv32
# dependency graph. The facade crate `lamquant-lml` (lib `lamquant_core`)
# re-exports these modules so existing `use lamquant_core::{lml,lpc,...}`
# sites are unaffected.
name = "lamquant-lossless-core"
version = "0.9.3"
edition = "2021"
rust-version = "1.81"
description = "LamQuant LML codec core — no_std integer Le Gall 5/3 + LPC + Golomb (the MCU-deployable lossless floor)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Quitetall/LamQuant-Lossless"

[lib]
# Distinct from the facade's `lamquant_core` (the facade re-exports us).
name = "lamquant_lossless_core"
crate-type = ["rlib"]

[features]
# Default = full host codec (std + rayon), matching the facade's old
# `default = ["host"]` so a bare `cargo test -p lamquant-lossless-core` exercises
# the whole suite. The firmware / no_std floor is validated explicitly with
# `--no-default-features --target riscv32imac-unknown-none-elf` (the CI gate).
default = ["archive"]

# Host codec capabilities: enables `std` (f64 RD search, std::io sinks,
# env-var opt-ins like LAMQUANT_TRY_EXTENDED_LPC, Anytime LPC, blockfloat bench).
std = []

# Host parallel encode/decode (the `Desktop` backend: rayon over channels).
# NOTE: this feature is named `archive` ONLY so the moved codec modules keep
# their existing `#[cfg(feature = "archive")]` gates byte-for-byte (protecting
# the byte-equal golden vectors). The actual file-archive layer (LMA/EDF/
# container) lives in the facade crate `lamquant-lml`, not here.
archive = ["std", "dep:rayon"]

# ADR 0023 Track B5+ / ADR 0051 P3.5: constriction-backed arithmetic +
# empirical-categorical range coders (arith_cat). Runtime opt-in via
# LAMQUANT_TRY_ARITHMETIC=1. (Slated to move to `lamquant-optimum` in a later
# warplan phase; kept here now so `lml.rs`'s keep-best calls are unchanged.)
experimental_arithmetic = ["archive", "dep:constriction", "dep:probability"]

# ADR 0023 Track B1: bit-packed-residual candidate. Opt-in via this feature
# AND LAMQUANT_TRY_BIT_PACK=1 at runtime.
experimental_bit_pack = ["archive"]

[dependencies]
# Shared no_std CRC-32 (re-exported as `lamquant_lossless_core::crc32`).
lamquant-common = { version = "0.1.3", path = "../crates/lamquant-common", default-features = false }
# `libm` supplies `log` for the adaptive-LPC AIC/MDL penalty in no_std builds
# (`f64::ln()` is std-only and would break the firmware path).
libm = "0.2"

# Host parallel path (the Desktop backend). Optional; pulled by `archive`.
rayon = { version = "1", optional = true }

# Research-grade entropy coders (rANS/range/arithmetic) backing
# src/arithmetic.rs + src/arith_cat.rs when `experimental_arithmetic` is on.
# BSD-3 (compatible with our AGPL-3.0). ~25 KB binary add.
constriction = { version = "0.4", default-features = false, features = ["std"], optional = true }
# Continuous distribution helpers (Laplace, etc) for the constriction
# LeakyQuantizer. Used only with `experimental_arithmetic`.
probability = { version = "0.20", optional = true }

[dev-dependencies]
# Core-level tests relocated from the facade (conformance, property_roundtrip,
# bounded_mae_property, target_bps_property, byte_equal_backends).
proptest = "1"
# byte_equal_backends.rs hashes encoded bytes for the golden table.
sha2 = "0.10"
